--- a/app/css/login.css
+++ b/app/css/login.css
@@ -36,7 +36,7 @@
     padding: 5px 0;
     outline: none;
     transition: background 0.3s ease 0s, color 0.3s ease 0s;
-    margin: 0 auto;
+    margin: 10px auto;
 }
 
 #login-button:hover {
@@ -51,4 +51,8 @@
 
 #response {
     margin-top: 10px;
+}
+
+#hostSelect {
+    width: 100%;
 }
