add advertiser brand

--- a/app/html/sideBar.dust
+++ b/app/html/sideBar.dust
@@ -13,4 +13,10 @@
         <br />
         <input type="text" id="advertiserName">
     </div>
+    <br />
+    <div>
+        <label for="advertiserBrand">Advertiser Brand</label>
+        <br />
+        <input type="text" id="advertiserBrand">
+    </div>
 </div>
